--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Estágio em Desenvolvimento Web</h3>
                         <div class="subheading mb-3">
-                            NSC Negócios + Tecnologia
+                            <a class="text-secondary" target="_blank" href="https://www.commercemaster.com.br">NSC
+                                Negócios + Tecnologia</a>
                         </div>
                         <p>
                             Estágio focado em aprender e por em prática
@@ -132,30 +133,18 @@
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
-                <h2 class="mb-5">Education</h2>
+                <h2 class="mb-5">Educação</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">University of Colorado Boulder</h3>
+                        <h3 class="mb-0">Fatec Mogi Mirim "Arthur de Azevedo"</h3>
                         <div class="subheading mb-3">
-                            Bachelor of Science
+                            Análise e Desenvolvimento de Sistemas
                         </div>
-                        <div>Computer Science - Web Development Track</div>
-                        <p>GPA: 3.23</p>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">August 2006 - May 2010</span>
-                    </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">James Buchanan High School</h3>
-                        <div class="subheading mb-3">
-                            Technology Magnet Program
-                        </div>
-                        <p>GPA: 3.56</p>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">August 2002 - May 2006</span>
+                        <div>Período Noturno · Cursando · Data prevista de conclusão: 12/2021 </div>
+                        <p>
+                            Curso da área de Tecnologia da Informação com foco em análise, desenvolvimento e engenharia
+                            de software
+                        </p>
                     </div>
                 </div>
             </div>
@@ -166,63 +155,81 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Skills</h2>
                 <div class="subheading mb-3">
-                    Programming Languages & Tools
+                    Linguagens de Programação & Ferramentas
                 </div>
                 <ul class="list-inline dev-icons">
                     <li class="list-inline-item">
                         <i class="fab fa-html5"></i>
                     </li>
+
                     <li class="list-inline-item">
                         <i class="fab fa-css3-alt"></i>
                     </li>
+
+                    <li class="list-inline-item">
+                        <i class="fab fa-bootstrap"></i>
+                    </li>
+
                     <li class="list-inline-item">
                         <i class="fab fa-js-square"></i>
                     </li>
+
                     <li class="list-inline-item">
-                        <i class="fab fa-angular"></i>
+                        <i class="fab fa-vuejs"></i>
                     </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-react"></i>
-                    </li>
+
                     <li class="list-inline-item">
                         <i class="fab fa-node-js"></i>
                     </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-sass"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-less"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-wordpress"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-gulp"></i>
-                    </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-grunt"></i>
-                    </li>
+
                     <li class="list-inline-item">
                         <i class="fab fa-npm"></i>
                     </li>
+
+                    <li class="list-inline-item">
+                        <i class="fab fa-yarn"></i>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <i class="fab fa-git-square"></i>
+                    </li>
                 </ul>
-                <div class="subheading mb-3">Workflow</div>
+                <div class="subheading mb-3">Workflow / Fluxos de Trabalho</div>
+                <ul class="fa-ul mb-3">
+
+
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        GitFlow
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Metodologias ágeis · SCRUM
+                    </li>
+                </ul>
+
+                <div class="subheading mb-3">Soft Skills</div>
                 <ul class="fa-ul mb-0">
+
+
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Mobile-First, Responsive Design
+                        Trabalho em equipe
                     </li>
+
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Browser Testing & Debugging
+                        Proatividade
                     </li>
+
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Functional Teams
+                        Comunicação
                     </li>
+
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Agile Development & Scrum
+                        Organização
                     </li>
                 </ul>
             </div>
@@ -231,20 +238,16 @@
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h2 class="mb-5">Interests</h2>
+                <h2 class="mb-2">Interesses</h2>
                 <p>
-                    Apart from being a web developer, I enjoy most of my
-                    time being outdoors. In the winter, I am an avid skier
-                    and novice ice climber. During the warmer months here in
-                    Colorado, I enjoy mountain biking, free climbing, and
-                    kayaking.
+                    Além de desenvolvimento web, também gosto muito de jogos on-line e filmes de ficção científica(meu
+                    favorito é o filme Interestelar).
                 </p>
                 <p class="mb-0">
-                    When forced indoors, I follow a number of sci-fi and
-                    fantasy genre movies and television shows, I am an
-                    aspiring chef, and I spend a large amount of my free
-                    time exploring the latest technology advancements in the
-                    front-end web development world.
+                    Também gosto muito do idioma inglês, por isso, tenho muito interesse em conhecer outros países como
+                    Canadá e Austrália(principalmente a Austrália por ter uma cultura muito bacana
+                    e clima parecido com o do nosso Brasil)
+                    e quem sabe no futuro até morar e trabalhar em algum desses países.
                 </p>
             </div>
         </section>
