Projects almost done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             id="sideNav"
         >
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Tiago Costa</span>
+                <span class="d-block d-lg-none">Tiago Dias</span>
                 <span class="d-none d-lg-block"
                     ><img
                         class="img-fluid img-profile rounded-circle mx-auto mb-2"
@@ -64,29 +64,39 @@
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#experience"
-                            >Experiência</a
+                        <a
+                            class="nav-link js-scroll-trigger"
+                            href="#experience"
                         >
+                            Experiência
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#education"
-                            >Educação</a
-                        >
+                        <a class="nav-link js-scroll-trigger" href="#education">
+                            Educação
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#skills"
-                            >Skills</a
-                        >
+                        <a class="nav-link js-scroll-trigger" href="#skills">
+                            Skills
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#interests"
-                            >Interesses</a
-                        >
+                        <a class="nav-link js-scroll-trigger" href="#awards">
+                            Participações
+                        </a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#awards"
-                            >Participações</a
-                        >
+                        <a class="nav-link js-scroll-trigger" href="#projects">
+                            Projetos
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#interests">
+                            Interesses
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -111,7 +121,7 @@
                     </div>
                     <p class="lead mb-5">
                         Olá, sou desenvolvedor Fullstack atualmente focando na
-                        stack Vue.js e Node.js(mas também pretendo aprender a
+                        stack Vue.js e Node.js(também pretendo aprender a
                         biblioteca React em um futuro próximo). Minha paixão por
                         tecnologia começou quando eu era criança, sempre fui
                         muito interessado por computadores e afins, logo, no
@@ -179,9 +189,9 @@
                             <p>
                                 Estágio focado em aprender e por em prática
                                 conhecimentos da área de desenvolvimento web,
-                                desenvolvimento do front-end de aplicações(como
-                                dashboards) com Vue.js e por vezes um pouco de
-                                desenvolvimento back-end com Node.js
+                                desenvolvimento do front-end de aplicações com
+                                Vue.js e por vezes um pouco de desenvolvimento
+                                back-end com Node.js
                             </p>
                         </div>
                         <div class="flex-shrink-0">
@@ -222,7 +232,9 @@
                     </div>
                 </div>
             </section>
+
             <hr class="m-0" />
+
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
@@ -317,28 +329,10 @@
                     </ul>
                 </div>
             </section>
+
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-2">Interesses</h2>
-                    <p>
-                        Além de desenvolvimento web, também gosto muito de jogos
-                        on-line e filmes de ficção científica(meu favorito é o
-                        filme Interestelar).
-                    </p>
-                    <p class="mb-0">
-                        Também gosto muito do idioma inglês, por isso, tenho
-                        muito interesse em conhecer outros países como Canadá e
-                        Austrália(principalmente a Austrália por ter uma cultura
-                        muito bacana e clima parecido com o do nosso Brasil) e
-                        quem sabe no futuro até morar e trabalhar em algum
-                        desses países.
-                    </p>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Awards-->
+
+            <!-- Participações-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Participações</h2>
@@ -402,66 +396,152 @@
                             <span class="text-primary">Junho de 2019</span>
                         </div>
                     </div>
-
-                    <!-- <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"
-                                ><i class="fas fa-trophy text-warning"></i
-                            ></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"
-                                ><i class="fas fa-trophy text-warning"></i
-                            ></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"
-                                ><i class="fas fa-trophy text-warning"></i
-                            ></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging
-                            Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"
-                                ><i class="fas fa-trophy text-warning"></i
-                            ></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe
-                            Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"
-                                ><i class="fas fa-trophy text-warning"></i
-                            ></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging
-                            Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"
-                                ><i class="fas fa-trophy text-warning"></i
-                            ></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"
-                                ><i class="fas fa-trophy text-warning"></i
-                            ></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul> -->
                 </div>
             </section>
+
+            <hr class="m-0" />
+
+            <!-- Projetos-->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Alguns dos meus projetos</h2>
+
+                    <div
+                        class="d-flex flex-column flex-md-row justify-content-between mb-5"
+                    >
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">
+                                API RESTful que gerencia uma base de usuários
+                                <i class="fab fa-node-js"></i>
+                            </h3>
+                            <div class="subheading mb-3">
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://nodejs.org/pt-br/"
+                                >
+                                    Node.js
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://expressjs.com/pt-br/"
+                                >
+                                    Express.js
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://www.mongodb.com/"
+                                >
+                                    MongoDB
+                                </a>
+                            </div>
+                            <p>
+                                Com o objetivo de praticar meus conhecimentos em
+                                Node.js e de resolver um desafio proposto a mim,
+                                desenvolvi uma API RESTful que gerencia uma base
+                                de usuários utilizando além do Node.js, o banco
+                                de dados não relacional MongoDB <br />
+                                <a
+                                    target="_blank"
+                                    href="https://github.com/TiagoDiass/node-mongo-api"
+                                >
+                                    Clique aqui para mais detalhes do projeto
+                                </a>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Maio de 2020</span>
+                        </div>
+                    </div>
+
+                    <div
+                        class="d-flex flex-column flex-md-row justify-content-between mb-5"
+                    >
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">
+                                Aplicação Web que consome a API do Github
+                                <i class="fab fa-github"></i>
+                            </h3>
+
+                            <div class="subheading mb-3">
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://br.vuejs.org/"
+                                >
+                                    Vue.js
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://sweetalert.js.org/"
+                                >
+                                    Sweet Alert
+                                </a>
+                            </div>
+                            <p>
+                                Com o objetivo de praticar meus conhecimentos em
+                                Vue.js, desenvolvi uma aplicação web simples que
+                                consome a API do Github para mostrar os dados de
+                                um usuário e um TOP 4 de seus repositórios
+                                baseando-se no número de estrelas de cada um
+                                <br />
+                                <a
+                                    target="_blank"
+                                    href="https://github-overview-vue.herokuapp.com"
+                                >
+                                    Clique aqui para ver o projeto rodando
+                                </a>
+                                <br />
+                                <a
+                                    target="_blank"
+                                    href="https://github.com/TiagoDiass/github-overview"
+                                >
+                                    Clique aqui para mais detalhes do projeto
+                                </a>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Junho de 2020</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <hr class="m-0" />
+
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-2">Interesses</h2>
+                    <p>
+                        Além de desenvolvimento web, também gosto muito de jogos
+                        on-line e filmes de ficção científica(meu favorito é o
+                        filme Interestelar).
+                    </p>
+                    <p class="mb-0">
+                        Também gosto muito do idioma inglês, por isso, tenho
+                        muito interesse em conhecer outros países como Canadá e
+                        Austrália(principalmente a Austrália por ter uma cultura
+                        muito bacana e clima parecido com o do nosso Brasil) e
+                        quem sabe no futuro até morar e trabalhar em algum
+                        desses países.
+                    </p>
+                </div>
+            </section>
+
+            <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
