--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Currículo - Tiago Costa</title>
+        <title>Currículo - Tiago Dias</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script
@@ -120,18 +120,18 @@
                         </a>
                     </div>
                     <p class="lead mb-5">
-                        Olá, sou desenvolvedor Fullstack atualmente focando na
-                        stack Vue.js e Node.js(também pretendo aprender a
-                        biblioteca React em um futuro próximo). Minha paixão por
-                        tecnologia começou quando eu era criança, sempre fui
-                        muito interessado por computadores e afins, logo, no
-                        final do meu ensino médio(no final de 2018, tenho 18
-                        anos atualmente) decidi que estudaria Tecnologia da
-                        Informação, e a partir disso conheci o mundo da
-                        programação. No começo deste ano comecei a estudar
-                        desenvolvimento web e venho me apaixonando por isso cada
-                        dia mais. Sou movido pelo desejo de criar soluções que
-                        possam transformar a vida das pessoas!
+                        Olá, sou um desenvolvedor Fullstack atualmente focando
+                        no estudo da stack Vue.js e Node.js(também pretendo
+                        aprender a biblioteca React em um futuro próximo). Minha
+                        paixão por tecnologia começou quando eu era criança,
+                        sempre fui muito interessado por computadores e afins,
+                        logo, no final do meu ensino médio(no final de 2018,
+                        tenho 18 anos atualmente) decidi que estudaria
+                        Tecnologia da Informação, e a partir disso conheci o
+                        mundo da programação. No começo deste ano comecei a
+                        estudar desenvolvimento web e venho me apaixonando por
+                        isso cada dia mais. Sou movido pelo desejo de criar
+                        soluções que possam transformar a vida das pessoas!
                     </p>
                     <div class="social-icons">
                         <a
@@ -359,7 +359,7 @@
                                 COVID-19, tendo isso em vista, eu e a minha
                                 equipe nos unimos e trabalhamos juntos para
                                 gerar uma ideia que visa ajudar fornecedores de
-                                serviços do nosso país ·
+                                serviços do nosso país <br />
                                 <a
                                     target="_blank"
                                     href="https://bit.ly/3cuXL1m"
