--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Currículo - Tiago Dias</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <title>Currículo · Tiago Dias</title>
+
         <!-- Font Awesome icons (free version)-->
         <script
             src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
