Adicionando projeto stock-trader

--- a/index.html
+++ b/index.html
@@ -411,6 +411,106 @@
                     >
                         <div class="flex-grow-1">
                             <h3 class="mb-0">
+                                StockTrader · Negociante de Ações
+                                <i class="fas fa-comments-dollar"></i>
+                            </h3>
+                            <div class="subheading mb-3">
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://br.vuejs.org/"
+                                >
+                                    Vue.js
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://vuex.vuejs.org/"
+                                >
+                                    Vuex
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://vuetifyjs.com/en/"
+                                >
+                                    Vuetify
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://sweetalert.js.org/"
+                                >
+                                    Sweet Alert
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://github.com/axios/axios"
+                                >
+                                    Axios
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://nodejs.org/pt-br/"
+                                >
+                                    Node.js
+                                </a>
+
+                                +
+
+                                <a
+                                    class="text-secondary"
+                                    target="_blank"
+                                    href="https://expressjs.com/pt-br/"
+                                >
+                                    Express.js
+                                </a>
+                            </div>
+                            <p>
+                                Com o objetivo de praticar meus conhecimentos de
+                                Vue.js e Vuex, e também experienciar o
+                                desenvolvimento de ponta a ponta de uma
+                                aplicação, desenvolvi uma aplicação web onde o
+                                usuário pode comprar ações ficctícias de algumas
+                                empresas e então vendê-las para ver se consegue
+                                obter lucro, assim simulando a experiência do
+                                mercado de ações.
+                                <br />
+                                <a
+                                    target="_blank"
+                                    href="https://github.com/TiagoDiass/stock-trader"
+                                >
+                                    Clique aqui para mais detalhes do projeto
+                                </a>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Julho de 2020</span>
+                        </div>
+                    </div>
+
+                    <div
+                        class="d-flex flex-column flex-md-row justify-content-between mb-5"
+                    >
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">
                                 API RESTful que gerencia uma base de usuários
                                 <i class="fab fa-node-js"></i>
                             </h3>
