Corrigindo erro ortográfico

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                                 Vue.js e Vuex, e também experienciar o
                                 desenvolvimento de ponta a ponta de uma
                                 aplicação, desenvolvi uma aplicação web onde o
-                                usuário pode comprar ações ficctícias de algumas
+                                usuário pode comprar ações fictícias de algumas
                                 empresas e então vendê-las para ver se consegue
                                 obter lucro, assim simulando a experiência do
                                 mercado de ações.
