Adicionando link para o video do stock-trader e icones

--- a/index.html
+++ b/index.html
@@ -498,6 +498,16 @@
                                     href="https://github.com/TiagoDiass/stock-trader"
                                 >
                                     Clique aqui para mais detalhes do projeto
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <br />
+                                <a
+                                    target="_blank"
+                                    href="https://youtu.be/PJwd2briE4c"
+                                >
+                                    Clique aqui para ver um video do projeto
+                                    rodando
+                                    <i class="fas fa-play-circle"></i>
                                 </a>
                             </p>
                         </div>
@@ -554,6 +564,7 @@
                                     href="https://github.com/TiagoDiass/node-mongo-api"
                                 >
                                     Clique aqui para mais detalhes do projeto
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                             </p>
                         </div>
@@ -602,6 +613,7 @@
                                     href="https://github-overview-vue.herokuapp.com"
                                 >
                                     Clique aqui para ver o projeto rodando
+                                    <i class="fas fa-play-circle"></i>
                                 </a>
                                 <br />
                                 <a
@@ -609,6 +621,7 @@
                                     href="https://github.com/TiagoDiass/github-overview"
                                 >
                                     Clique aqui para mais detalhes do projeto
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                             </p>
                         </div>
