Adding animation on about section

--- a/index.html
+++ b/index.html
@@ -15,17 +15,26 @@
             src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
             crossorigin="anonymous"
         ></script>
+
         <!-- Google fonts-->
         <link
             href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
             rel="stylesheet"
             type="text/css"
         />
+
         <link
             href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
             rel="stylesheet"
             type="text/css"
         />
+
+        <!-- Animate.css -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+        />
+
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -105,7 +114,9 @@
         <div class="container-fluid p-0">
             <!-- About-->
             <section class="resume-section" id="about">
-                <div class="resume-section-content">
+                <div
+                    class="resume-section-content animate__animated animate__fadeInLeft"
+                >
                     <h1 class="mb-0">
                         Tiago
                         <span class="text-primary">Dias</span>
