changing cv link and adding tooltips to skills icons

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </a>
                         <a
                             target="_blank"
-                            href="https://drive.google.com/file/d/1KzSOUI6x6DcuiHnRuc3QA2nu4Z7BnfzN/view?usp=sharing"
+                            href="https://drive.google.com/file/d/1wpd1i2y_6Y4AtexlXQtgX2f4NpZcUpPp/view?usp=sharing"
                             class="download-cv-button"
                         >
                             <i class="fas fa-file-download"></i>
@@ -271,43 +271,112 @@
                         Linguagens de Programação & Ferramentas
                     </div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="HTML 5"
+                        >
                             <i class="fab fa-html5"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="CSS 3"
+                        >
                             <i class="fab fa-css3-alt"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="Bootstrap 4"
+                        >
                             <i class="fab fa-bootstrap"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="Sass"
+                        >
                             <i class="fab fa-sass"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="JavaScript"
+                        >
                             <i class="fab fa-js-square"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="Vue.js"
+                        >
                             <i class="fab fa-vuejs"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="Node.js"
+                        >
                             <i class="fab fa-node-js"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="React"
+                        >
+                            <i class="fab fa-react"></i>
+                        </li>
+
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="NPM"
+                        >
                             <i class="fab fa-npm"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="Yarn"
+                        >
                             <i class="fab fa-yarn"></i>
                         </li>
 
-                        <li class="list-inline-item">
+                        <li
+                            class="list-inline-item"
+                            class="list-inline-item"
+                            data-toggle="tooltip"
+                            data-placement="top"
+                            title="Git"
+                        >
                             <i class="fab fa-git-square"></i>
                         </li>
                     </ul>
@@ -828,5 +897,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+        </script>
     </body>
 </html>
