changing presentation text

--- a/index.html
+++ b/index.html
@@ -131,18 +131,18 @@
                         </a>
                     </div>
                     <p class="lead mb-5">
-                        Olá, sou um desenvolvedor Fullstack atualmente focando
-                        no estudo da stack Vue.js e Node.js(também pretendo
-                        aprender a biblioteca React em um futuro próximo). Minha
-                        paixão por tecnologia começou quando eu era criança,
-                        sempre fui muito interessado por computadores e afins,
-                        logo, no final do meu ensino médio(no final de 2018,
-                        tenho 18 anos atualmente) decidi que estudaria
-                        Tecnologia da Informação, e a partir disso conheci o
-                        mundo da programação. No começo deste ano comecei a
-                        estudar desenvolvimento web e venho me apaixonando por
-                        isso cada dia mais. Sou movido pelo desejo de criar
-                        soluções que possam transformar a vida das pessoas!
+                        Olá, sou um Desenvolvedor Fullstack atualmente
+                        trabalhando com a stack Vue.js e Node.js(e atualmente
+                        estou aprendendo React). Minha paixão por tecnologia
+                        começou quando eu era criança, sempre fui muito
+                        interessado por computadores e afins, logo, no final do
+                        meu ensino médio(no final de 2018, tenho 18 anos
+                        atualmente) decidi que estudaria Tecnologia da
+                        Informação, e a partir disso conheci o mundo da
+                        programação. No começo deste ano comecei a estudar
+                        desenvolvimento web e venho me apaixonando por isso cada
+                        dia mais. Sou movido pelo desejo de criar soluções que
+                        possam transformar a vida das pessoas!
                     </p>
                     <div class="social-icons">
                         <a
