changing github-overview link

--- a/index.html
+++ b/index.html
@@ -812,7 +812,8 @@
                     >
                         <div class="flex-grow-1">
                             <h3 class="mb-0">
-                                Aplicação Web que consome a API do Github
+                                Github Overview · Aplicação Web que consome a
+                                API do Github
                                 <i class="fab fa-github"></i>
                             </h3>
 
@@ -830,21 +831,21 @@
                                 <a
                                     class="text-secondary"
                                     target="_blank"
-                                    href="https://sweetalert.js.org/"
+                                    href="https://sass-lang.com"
                                 >
-                                    Sweet Alert
+                                    Sass
                                 </a>
                             </div>
                             <p>
                                 Com o objetivo de praticar meus conhecimentos em
-                                Vue.js, desenvolvi uma aplicação web simples que
-                                consome a API do Github para mostrar os dados de
-                                um usuário e um TOP 4 de seus repositórios
-                                baseando-se no número de estrelas de cada um
+                                Vue.js, desenvolvi uma aplicação web que consome
+                                a API do Github para mostrar os dados de um
+                                usuário e seus repositórios ordenados pelo
+                                número de estrelas de cada um
                                 <br />
                                 <a
                                     target="_blank"
-                                    href="https://github-overview-vue.herokuapp.com"
+                                    href="https://github-profile-overview.netlify.app/"
                                 >
                                     Clique aqui para ver o projeto rodando
                                     <i class="fas fa-play-circle"></i>
